--- a/sass/main.scss
+++ b/sass/main.scss
@@ -107,6 +107,7 @@ dd { margin-bottom: 10px; }
 	
 	.single-#{$category}, .section-#{$category}, .category-#{$category}, .parent-#{$category} {
 		h1, h2, #nav-below h3 { 
+			position: relative;
 			img { 
 				position: absolute; 
 			}
